innoextract: depends on boost-libs

--- a/mingw-w64-innoextract/PKGBUILD
+++ b/mingw-w64-innoextract/PKGBUILD
@@ -4,7 +4,7 @@ _realname=innoextract
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.9
-pkgrel=9
+pkgrel=10
 pkgdesc="A tool to extract installers created by Inno Setup (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -13,9 +13,10 @@ license=("spdx:MIT")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-python")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-xz")
 source=("https://constexpr.org/innoextract/files/${_realname}-${pkgver}.tar.gz"{,.sig}
         "001-fix-build-against-boost-1.85.patch::https://github.com/dscharrer/innoextract/commit/264c2fe6.patch")
