--- a/mingw-w64-ixion/PKGBUILD
+++ b/mingw-w64-ixion/PKGBUILD
@@ -4,7 +4,7 @@ _realname=ixion
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.19.0
-pkgrel=4
+pkgrel=5
 pkgdesc="A general purpose formula parser & interpreter. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -14,9 +14,10 @@ msys2_references=(
 )
 license=('spdx:MPL-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost")
+         "${MINGW_PACKAGE_PREFIX}-boost-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-mdds"
              "${MINGW_PACKAGE_PREFIX}-python")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python bindings")
