ledger: depends on boost-libs

--- a/mingw-w64-ledger/PKGBUILD
+++ b/mingw-w64-ledger/PKGBUILD
@@ -4,7 +4,7 @@ _realname=ledger
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.3.2
-pkgrel=4
+pkgrel=5
 pkgdesc="Double-entry accounting system with a command-line reporting interface. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -16,12 +16,13 @@ msys2_references=(
 )
 license=("spdx:BSD-3-Clause")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-mpfr"
          "${MINGW_PACKAGE_PREFIX}-gmp")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-utf8cpp"
              "${MINGW_PACKAGE_PREFIX}-python")
 source=("https://github.com/ledger/ledger/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
