libcmis: depends on boost-libs

--- a/mingw-w64-libcmis/PKGBUILD
+++ b/mingw-w64-libcmis/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libcmis
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.6.2
-pkgrel=2
+pkgrel=3
 pkgdesc="C/C++ CMIS client library. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -14,11 +14,12 @@ msys2_references=(
 )
 license=('spdx:MPL-1.1 OR LGPL-2.1-or-later OR GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-curl"
          "${MINGW_PACKAGE_PREFIX}-libxml2")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-cppunit")
 source=("https://github.com/tdf/libcmis/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.xz"
         "001-fix-build-with-boost-1.86.patch::https://github.com/tdf/libcmis/commit/dfcb642a.patch")
