liblas: depends on boost-libs

--- a/mingw-w64-liblas/PKGBUILD
+++ b/mingw-w64-liblas/PKGBUILD
@@ -4,7 +4,7 @@ _realname=liblas
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.8.1
-pkgrel=5
+pkgrel=6
 pkgdesc="ASPRS LiDAR data translation toolset (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,9 +16,10 @@ msys2_references=(
 license=('custom')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja")
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          #"${MINGW_PACKAGE_PREFIX}-laszip"
          "${MINGW_PACKAGE_PREFIX}-libgeotiff")
 source=("https://github.com/libLAS/libLAS/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
