--- a/mingw-w64-maeparser/PKGBUILD
+++ b/mingw-w64-maeparser/PKGBUILD
@@ -4,7 +4,7 @@ _realname=maeparser
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.3.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Maestro file parser. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -14,10 +14,11 @@ msys2_references=(
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost")
+         "${MINGW_PACKAGE_PREFIX}-boost-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja")
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost")
 source=("https://github.com/schrodinger/maeparser/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('a8d80f67d1b9be6e23b9651cb747f4a3200132e7d878a285119c86bf44568e36')
 
