openimageio: depends on boost-libs

--- a/mingw-w64-openimageio/PKGBUILD
+++ b/mingw-w64-openimageio/PKGBUILD
@@ -16,7 +16,7 @@ msys2_references=(
   "cpe: cpe:/a:openimageio:openimageio"
 )
 license=('spdx:Apache-2.0')
-depends=("${MINGW_PACKAGE_PREFIX}-boost"
+depends=("${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-bzip2"
          "${MINGW_PACKAGE_PREFIX}-dcmtk"
          "${MINGW_PACKAGE_PREFIX}-ffmpeg"
@@ -41,6 +41,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-fmt"
              "${MINGW_PACKAGE_PREFIX}-qt6-base"
              "${MINGW_PACKAGE_PREFIX}-robin-map"
