--- a/mingw-w64-openshadinglanguage/PKGBUILD
+++ b/mingw-w64-openshadinglanguage/PKGBUILD
@@ -15,7 +15,7 @@ msys2_references=(
   'archlinux: openshadinglanguage'
 )
 license=("spdx:BSD-3-Clause")
-depends=("${MINGW_PACKAGE_PREFIX}-boost"
+depends=("${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-clang-libs"
          "${MINGW_PACKAGE_PREFIX}-openexr"
          "${MINGW_PACKAGE_PREFIX}-openimageio"
@@ -25,6 +25,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-boost"
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-pybind11"
              "${MINGW_PACKAGE_PREFIX}-clang"
