precice: depends on boost-libs

--- a/mingw-w64-precice/PKGBUILD
+++ b/mingw-w64-precice/PKGBUILD
@@ -5,7 +5,7 @@ _realname=precice
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.5.0
-pkgrel=9
+pkgrel=10
 pkgdesc='A Coupling Library for Partitioned Multi-Physics Simulations on Massively Parallel Systems (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -13,7 +13,7 @@ url='https://www.precice.org'
 msys2_repository_url='https://github.com/precice/precice'
 license=('spdx:LGPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
          #"${MINGW_PACKAGE_PREFIX}-petsc"
          "${MINGW_PACKAGE_PREFIX}-python"
@@ -23,6 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-msmpi"
              #"${MINGW_PACKAGE_PREFIX}-ninja"
              #"${MINGW_PACKAGE_PREFIX}-petsc-build"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-eigen3"
              "git")
 source=(https://github.com/precice/precice/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz
