--- a/mingw-w64-prjtrellis/PKGBUILD
+++ b/mingw-w64-prjtrellis/PKGBUILD
@@ -4,7 +4,7 @@ _realname=prjtrellis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.4
-pkgrel=5
+pkgrel=6
 pkgdesc="Documenting the Lattice ECP5 bit-stream format (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,13 +12,14 @@ url="https://github.com/YosysHQ/prjtrellis"
 license=('spdx:MIT')
 groups=("${MINGW_PACKAGE_PREFIX}-eda")
 depends=(
-  "${MINGW_PACKAGE_PREFIX}-boost"
+  "${MINGW_PACKAGE_PREFIX}-boost-libs"
   "${MINGW_PACKAGE_PREFIX}-python"
 )
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-cmake"
   "${MINGW_PACKAGE_PREFIX}-ninja"
+  "${MINGW_PACKAGE_PREFIX}-boost"
   "git"
 )
 _commit_db='ce8cdafe7a8c718f0ec43895894b668a479ba33f'
