--- a/mingw-w64-vera++/PKGBUILD
+++ b/mingw-w64-vera++/PKGBUILD
@@ -4,18 +4,19 @@ _realname=vera++
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.3.0
-pkgrel=11
+pkgrel=12
 pkgdesc="A programmable tool for verification, analysis and transformation of C++ source code (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://bitbucket.org/verateam/vera"
 license=('spdx:BSL-1.0')
 depends=("${MINGW_PACKAGE_PREFIX}-tcl"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja")
+             "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-boost")
 source=(https://bitbucket.org/verateam/vera/downloads/${_realname}-${pkgver}.tar.gz
         0001-fix_python_detection_issues.patch
         0002-link-to-shared-boost.patch)
