wt: depends on boost-libs

--- a/mingw-w64-wt/PKGBUILD
+++ b/mingw-w64-wt/PKGBUILD
@@ -4,7 +4,7 @@ _realname=wt
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.10.4
-pkgrel=2
+pkgrel=3
 pkgdesc="A C++ library and application server for developing and deploying web applications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,7 +12,7 @@ url="http://www.webtoolkit.eu/"
 msys2_repository_url="https://github.com/emweb/wt"
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-boost-libs"
          "${MINGW_PACKAGE_PREFIX}-fontconfig"
          "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-glew"
@@ -28,6 +28,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
              "${MINGW_PACKAGE_PREFIX}-graphviz"
              "${MINGW_PACKAGE_PREFIX}-asciidoc"
+             "${MINGW_PACKAGE_PREFIX}-boost"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-pygments"
              "${MINGW_PACKAGE_PREFIX}-postgresql"
