mesa: Add python-packaging in makedepends

--- a/mingw-w64-mesa/PKGBUILD
+++ b/mingw-w64-mesa/PKGBUILD
@@ -21,6 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-polly"
              "${MINGW_PACKAGE_PREFIX}-python-mako"
+             "${MINGW_PACKAGE_PREFIX}-python-packaging"
              "${MINGW_PACKAGE_PREFIX}-python-yaml"
              "${MINGW_PACKAGE_PREFIX}-libclc"
              "${MINGW_PACKAGE_PREFIX}-libelf"
