adol-c: Fix dependencies

--- a/mingw-w64-adol-c/PKGBUILD
+++ b/mingw-w64-adol-c/PKGBUILD
@@ -4,21 +4,25 @@ _realname=adol-c
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.7.2
-pkgrel=6
+pkgrel=7
 pkgdesc='Automatic Differentiation of Algorithms written in C/C++ (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/coin-or/ADOL-C'
 license=('spdx:EPL-1.0')
-depends=("${MINGW_PACKAGE_PREFIX}-boost"
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-omp")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-autotools")
-source=(https://github.com/coin-or/ADOL-C/archive/releases/${pkgver}.tar.gz)
-sha256sums=('701E0856BAAE91B98397960D5E0A87A549988DE9D4002D0E9A56FA08F5455F6E')
+             "${MINGW_PACKAGE_PREFIX}-autotools"
+             "${MINGW_PACKAGE_PREFIX}-boost")
+source=(https://github.com/coin-or/ADOL-C/archive/releases/${pkgver}/${_realname}-${pkgver}.tar.gz
+        001-do-not-search-for-boost-system.patch)
+sha256sums=('701e0856baae91b98397960d5e0a87a549988de9d4002d0e9a56fa08f5455f6e'
+            '4f1b56a6399b5fafc4a0344cd47a927aa8cbe1c81e16e2e5e27bb552c1b12e85')
 
 prepare() {
   cd ${_realname}-releases-${pkgver}
+  patch -p1 -i "${srcdir}"/001-do-not-search-for-boost-system.patch
   autoreconf -fi
 }
 
@@ -26,7 +30,6 @@ build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
   local -a extra_config
-
   extra_config+=(--with-openmp-flag="-fopenmp")
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     LDFLAGS+=" -lomp"
