--- a/mingw-w64-alembic/PKGBUILD
+++ b/mingw-w64-alembic/PKGBUILD
@@ -4,21 +4,24 @@ _realname=alembic
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.8.5
-pkgrel=1
+pkgrel=2
 pkgdesc="A open framework for storing and sharing scene data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.alembic.io/"
+msys2_repository_url="https://github.com/alembic/alembic"
 license=('spdx:BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-imath"
-         "${MINGW_PACKAGE_PREFIX}-boost"
-         "${MINGW_PACKAGE_PREFIX}-hdf5"
-         "${MINGW_PACKAGE_PREFIX}-zlib")
+depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+         "${MINGW_PACKAGE_PREFIX}-imath"
+         "${MINGW_PACKAGE_PREFIX}-hdf5")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-boost")
-source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/alembic/${_realname}/archive/${pkgver}.tar.gz"
+             "${MINGW_PACKAGE_PREFIX}-ninja")
+             #"${MINGW_PACKAGE_PREFIX}-boost"
+             #"${MINGW_PACKAGE_PREFIX}-python")
+#optdepends=("${MINGW_PACKAGE_PREFIX}-boost: Python bindings"
+#            "${MINGW_PACKAGE_PREFIX}-python: Python bindings")
+source=("https://github.com/alembic/${_realname}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
         "0001-alembic-1.7.9-fix-windows-build.patch"
         "0002-alembic-1.7.9-remove-msc_ver-and-fix-builtins-and-includes.patch")
 sha256sums=('180a12f08d391cd89f021f279dbe3b5423b1db751a9898540c8059a45825c2e9'
@@ -90,5 +93,6 @@ package() {
   find "${pkgdir}${MINGW_PREFIX}/lib/cmake" -type f -name '*.cmake' \
     -exec sed -i -e "s|${WINPREFIX}|\$\{_IMPORT_PREFIX\}|g" {} \;
 
-  install -Dm644 ${srcdir}/${_realname}-${pkgver}/LICENSE.txt "${pkgdir}${MINGW_PREFIX}"/share/licenses/${_realname}/LICENSE
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE.txt \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
