vigra: update to 1.12.1

--- a/mingw-w64-vigra/PKGBUILD
+++ b/mingw-w64-vigra/PKGBUILD
@@ -3,49 +3,42 @@
 _realname=vigra
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=1.11.1
+pkgver=1.12.1
 _pkgver=${pkgver//./-}
-pkgrel=14
+pkgrel=1
 pkgdesc="vigra - Generic Programming for Computer Vision (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://ukoethe.github.io/vigra/'
+msys2_repository_url="https://github.com/ukoethe/vigra"
 license=('spdx:X11')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
-         "${MINGW_PACKAGE_PREFIX}-boost"
          "${MINGW_PACKAGE_PREFIX}-fftw"
          "${MINGW_PACKAGE_PREFIX}-hdf5"
          "${MINGW_PACKAGE_PREFIX}-libjpeg-turbo"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libtiff"
          "${MINGW_PACKAGE_PREFIX}-openexr"
-         "${MINGW_PACKAGE_PREFIX}-python-numpy"
          "${MINGW_PACKAGE_PREFIX}-zlib")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-doxygen"
-             "${MINGW_PACKAGE_PREFIX}-python-nose"
+             "${MINGW_PACKAGE_PREFIX}-boost"
+             "${MINGW_PACKAGE_PREFIX}-python-numpy"
+             "${MINGW_PACKAGE_PREFIX}-python-pytest"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx")
-source=(https://github.com/ukoethe/vigra/releases/download/Version-${_pkgver}/${_realname}-${pkgver}-src.tar.gz
+optdepends=("${MINGW_PACKAGE_PREFIX}-boost: For VigraNumpy"
+            "${MINGW_PACKAGE_PREFIX}-python-numpy: For VigraNumpy")
+source=(https://github.com/ukoethe/vigra/archive/Version-${_pkgver}/${_realname}-${pkgver}.tar.gz
         0001-vigra-numpy-detection.patch
-        0002-doc-destination.patch
-        0003-vigra-cmath-std-namespace.patch
-        0010-fix-incorrect-template-parameter.patch
-        0011-fix-receive-from-PyUnicode_AsUTF8.patch
-        0012-hdf5-fixes.patch
-        0013-fix-build-hdf5-1.12.patch
+        0002-fix-configuring-with-cmake.patch
         0014-python-module.ext.patch
         0015-cmake-files-location.patch
         0016-Fix-FindOpenEXR.patch)
-sha256sums=('a5564e1083f6af6a885431c1ee718bad77d11f117198b277557f8558fa461aaf'
-            '3395713d051f53b69979a4a610fd88a440b320ca5d0c0b6e944caf3fa3e2cbcd'
-            'f214f448616aa9c4e05d5a83738bd14a48be40dfc4f6cfa233a9a81e76bfe23d'
-            'b70f6f2d3873188febf406cb2bceeac45a5c5f47f14f2b481ff3a9cdb66f5d51'
-            'f151f902483dfa2b1f3d431f54bb161300cf184158c9f416fa653d19ab363cc4'
-            '754c0a67a2909512f696a56d4fb9c5253204f8db87389a9588de39a4fa03ffd2'
-            '8f09d4b8e4044f20db1095c7232080bb9dff9743c2e2437ca43e5e88dc24a3a4'
-            'bd3c224458a022c5255259e0a81bf26181de798b487fd257d1d21e05b5aa7d4c'
-            '6f2a91b882ca2cab044655c97252dbbf1d49dc798b739ad62b169c5ef35b8e6b'
+sha256sums=('8836a40a340f96ed2abf53780e883c5bf58002eb182cfccb4255b553ca48db33'
+            '3eb264733fa81e3605000048e292a76b5bb4727d7c42fd1114dc66eacfa6b012'
+            'fbc265cdc6e73e7ae566a11a2835660cc88509801e1351837499a6a02d58a696'
+            'b981e9837a864badf6d892623d33565848dea2dbe4f669535c94a0d0282dfbed'
             '06e3f1ca5ad4dfa5a96194843445bbe6b6f9cf14865630ac0bae38f2beec9d41'
             '2572717e39f916c7c463b8f49306b683c5923906be2721f7da181c58b3a2b34b')
 
@@ -58,16 +51,11 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "${srcdir}"/${_realname}-Version-${_pkgver}
 
   apply_patch_with_msg \
     0001-vigra-numpy-detection.patch \
-    0002-doc-destination.patch \
-    0003-vigra-cmath-std-namespace.patch \
-    0010-fix-incorrect-template-parameter.patch \
-    0011-fix-receive-from-PyUnicode_AsUTF8.patch \
-    0012-hdf5-fixes.patch \
-    0013-fix-build-hdf5-1.12.patch \
+    0002-fix-configuring-with-cmake.patch \
     0014-python-module.ext.patch \
     0015-cmake-files-location.patch \
     0016-Fix-FindOpenEXR.patch
@@ -85,14 +73,16 @@ build() {
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake -Wno-dev \
-    -G"MSYS Makefiles" \
+    -G"Ninja" \
     -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
     ${extra_config[@]} \
+    -DDOCINSTALL=share/doc \
     -DWITH_BOOST_GRAPH=ON \
     -DWITH_VIGRANUMPY=ON \
     -DWITH_OPENEXR=ON \
-    -DPYTHON_EXECUTABLE=${MINGW_PREFIX}/bin/python \
-    ../${_realname}-${pkgver}
+    -DPython_EXECUTABLE=${MINGW_PREFIX}/bin/python \
+    -DBoost_USE_MULTITHREADED=ON \
+    ../${_realname}-Version-${_pkgver}
 
   ${MINGW_PREFIX}/bin/cmake --build .
 }
@@ -112,6 +102,6 @@ package() {
     sed -e "s|${MINGW_PREFIX}|\$\{_IMPORT_PREFIX\}|g" -i ${_f}
   done
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE.txt" \
-    "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
+  install -Dm644 "${srcdir}"/${_realname}-Version-${_pkgver}/LICENSE.txt \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt
 }
