wasmer: update to 5.0.1

--- a/mingw-w64-wasmer/PKGBUILD
+++ b/mingw-w64-wasmer/PKGBUILD
@@ -4,7 +4,7 @@ _realname=wasmer
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}")
-pkgver=5.0.0
+pkgver=5.0.1
 pkgrel=1
 pkgdesc="The leading Wasm Runtime supporting WASIX, WASI and Emscripten (mingw-w64)"
 arch=('any')
@@ -20,7 +20,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 options=('!lto')
 source=("git+${url}.git#tag=v${pkgver}"
         "reproducible-builds.patch")
-sha256sums=('07f312f40eff2ff32f19ae83d7a56295fd72a5f7d0af22a011108271d07a6c69'
+sha256sums=('31312821809aabdb1309c90b02364e92eee22bcc99310ce753f2cf836cd2dc11'
             '7f08b41e0077a23b16eb2e9410ac953b293d1eeeaf1b83915a596ac437f81125')
 
 prepare() {
@@ -59,9 +59,7 @@ package_libwasmer() {
   install -Dm755 "${_realname}"/target/release/wasmer.dll "${pkgdir}${MINGW_PREFIX}/bin/wasmer.dll"
   install -Dm755 "${_realname}"/target/release/wasmer.dll.a "${pkgdir}${MINGW_PREFIX}/lib/wasmer.dll.a"
   install -Dm755 "${_realname}"/target/release/libwasmer.a "${pkgdir}${MINGW_PREFIX}/lib/libwasmer.a"
-  install -Dm644 "${_realname}"/lib/c-api/wasm.h "${pkgdir}${MINGW_PREFIX}/include/wasm.h"
-  install -Dm644 "${_realname}"/lib/c-api/wasmer.h "${pkgdir}${MINGW_PREFIX}/include/wasmer.h"
-  install -Dm644 "${_realname}"/lib/c-api/wasmer_wasm.h "${pkgdir}${MINGW_PREFIX}/include/wasmer_wasm.h"
+  install -vDm644 "${_realname}"/lib/c-api/*.h -t "${pkgdir}${MINGW_PREFIX}/include/"
   "${_realname}"/target/release/wasmer config --pkg-config | install -Dm644 /dev/stdin \
     "${pkgdir}${MINGW_PREFIX}/lib/pkgconfig/wasmer.pc"
   install -Dm644 "${_realname}"/LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/lib${_realname}/LICENSE"
