cargo-about: enable mingw64 required for Zed

--- a/mingw-w64-cargo-about/PKGBUILD
+++ b/mingw-w64-cargo-about/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.6.4
 pkgrel=1
 pkgdesc="Cargo plugin to generate list of all licenses for a crate (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/EmbarkStudios/cargo-about'
 license=('spdx:Apache-2.0 OR MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-zstd")
