wasmtime: update to 26.0.1

--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -5,8 +5,8 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=26.0.0
-pkgrel=2
+pkgver=26.0.1
+pkgrel=1
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.9+zstd.1.5.5/download"
         "zstd-sys-remove-statik.patch")
-sha256sums=('7a2060c60666320882145d9e9dc607913bd1987078d635357d9c7af86fb196f6'
+sha256sums=('eddb912bc48e9b6127d9524e21c6dd1cdab7ef843f009eed3c902a02ed472812'
             '9e16efa8a874a0481a574084d34cc26fdb3b99627480f785888deb6386506656'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -46,7 +46,6 @@ END
 build() {
   export ZSTD_SYS_USE_PKG_CONFIG=1
   export WINAPI_NO_BUNDLED_LIBRARIES=1
-  export MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="
 
   declare -a extra_config
   if check_option "debug" "n"; then
@@ -55,15 +54,16 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  cmake \
-    -GNinja \
-    -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
-    -DBUILD_SHARED_LIBS=ON \
-    -DWASMTIME_FASTEST_RUNTIME=ON \
-    -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
-    "${extra_config[@]}" \
-    -S "${_realname}/crates/c-api" \
-    -B "build-${MSYSTEM}"
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+    cmake \
+      -GNinja \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      -DBUILD_SHARED_LIBS=ON \
+      -DWASMTIME_FASTEST_RUNTIME=ON \
+      -DWASMTIME_TARGET="$(rustc -vV | sed -n 's/host: //p')" \
+      "${extra_config[@]}" \
+      -S "${_realname}/crates/c-api" \
+      -B "build-${MSYSTEM}"
 
   cmake --build "build-${MSYSTEM}"
 
