Disable python-imbalanced-learn
Same as ae28edc31b8a4144

--- a/mingw-w64-python-imbalanced-learn/PKGBUILD
+++ b/mingw-w64-python-imbalanced-learn/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=0.12.4
 pkgrel=2
 pkgdesc="A Python Package to Tackle the Curse of Imbalanced Datasets in Machine Learning (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=()
 url='https://imbalanced-learn.org/'
 msys2_repository_url='https://github.com/scikit-learn-contrib/imbalanced-learn'
 msys2_references=(
