pixman: Update to 0.44.0

--- a/mingw-w64-pixman/PKGBUILD
+++ b/mingw-w64-pixman/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=pixman
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.43.4
+pkgver=0.44.0
 pkgrel=1
 pkgdesc="The pixel-manipulation library for X and cairo (mingw-w64)"
 arch=('any')
@@ -21,10 +21,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 source=("https://xorg.freedesktop.org/releases/individual/lib/pixman-${pkgver}.tar.xz")
-sha256sums=('48d8539f35488d694a2fef3ce17394d1153ed4e71c05d1e621904d574be5df19')
+noextract=("pixman-${pkgver}.tar.xz")
+sha256sums=('ea55473db5ec9f068bbf4d14ec3186b742804bf74fdc782fc89aa87d2656fc46')
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  tar -xf "${srcdir}/pixman-${pkgver}.tar.xz" -C "${srcdir}" 2>/dev/null || true
+
+  cd "${_realname}-${pkgver}"
 }
 
 build() {
