gpgme: add __USE_MINGW_ANSI_STDIO=1 to CPPFLAGS
build tool mkdefsinc uses (sn)printf '%n', which is blocked for security
reasons in UCRT (perhaps only recent versions).  Because it is a build
tool (built for the build rather than target system in the case of a
cross-compile), it does not respect CFLAGS, but it does respect
CPPFLAGS.  Define __USE_MINGW_ANSI_STDIO=1 in CPPFLAGS so it uses that
implementation that allows '%n'.
See https://github.com/msys2/MINGW-packages/pull/22442#issuecomment-2463055922

--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -10,7 +10,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
            "${MINGW_PACKAGE_PREFIX}-qgpgme-qt6" \
            "${MINGW_PACKAGE_PREFIX}-python-gpgme"))
 pkgver=1.23.2
-pkgrel=6
+pkgrel=8
 pkgdesc="A C wrapper library for GnuPG (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -102,6 +102,15 @@ build() {
 
   # for clang
   export CFLAGS="${CFLAGS} -Wno-int-conversion -Wno-incompatible-pointer-types -Wno-incompatible-function-pointer-types"
+
+  # build tool mkdefsinc uses (sn)printf '%n', which is blocked for security
+  # reasons in UCRT (perhaps only recent versions).  Because it is a build tool
+  # (built for the build rather than target system in the case of a
+  # cross-compile), it does not respect CFLAGS, but it does respect CPPFLAGS.
+  # Define __USE_MINGW_ANSI_STDIO=1 in CPPFLAGS so it uses that implementation
+  # that allows '%n'.
+  # See https://github.com/msys2/MINGW-packages/pull/22442#issuecomment-2463055922
+  export CPPFLAGS="${CPPFLAGS} -Wp,-D__USE_MINGW_ANSI_STDIO=1"
 
   # mingw doxygen can't wrok with UNIX paths in doxyfile
   # --with-libtool-modification=never : Otherwise DLL name changes
