--- a/mingw-w64-uv/PKGBUILD
+++ b/mingw-w64-uv/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.5.0
 pkgrel=1
 pkgdesc='An extremely fast Python package installer and resolver, written in Rust (mingw-w64)'
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/astral-sh/uv"
 license=('spdx:Apache-2.0 OR MIT')
 msys2_references=(
