--- a/mingw-w64-kglobalaccel/PKGBUILD
+++ b/mingw-w64-kglobalaccel/PKGBUILD
@@ -4,7 +4,7 @@ source "$(dirname ${BASH_SOURCE[0]})"/../mingw-w64-PKGBUILD-common/kde-framework
 _realname=kglobalaccel
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=6.7.0
+pkgver=6.8.0
 pkgrel=1
 pkgdesc="Add support for global workspace shortcuts (mingw-w64)"
 arch=('any')
@@ -27,7 +27,7 @@ makedepends=(
 )
 groups=("${MINGW_PACKAGE_PREFIX}-kf6")
 source=("https://download.kde.org/stable/frameworks/${pkgver%.*}/${_realname}-${pkgver}.tar.xz"{,.sig})
-sha256sums=('2a35b9e06c6601d602b3a45e278c49e11e4627939cfacffb1fdee0826a6f6e0b'
+sha256sums=('caa6d85b08867cb837f08a789798844724d5392320193782a83e14135f669783'
             'SKIP')
 validpgpkeys=(
   'E0A3EB202F8E57528E13E72FD7574483BB57B18D' # Jonathan Esk-Riddell <jr@jriddell.org>
@@ -51,6 +51,7 @@ build() {
       -DBUILD_QCH=OFF \
       -DBUILD_TESTING=OFF \
       -DKF_IGNORE_PLATFORM_CHECK=ON \
+      -DWITH_X11=OFF \
       "${_extra_config[@]}" \
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
