cargo-leptos: disable clangarm64

--- a/mingw-w64-cargo-leptos/PKGBUILD
+++ b/mingw-w64-cargo-leptos/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=0.2.21
 pkgrel=1
 pkgdesc='Build tool for Leptos (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://leptos.dev/'
 msys2_repository_url='https://github.com/leptos-rs/cargo-leptos'
 msys2_references=(
