--- a/mingw-w64-x265/PKGBUILD
+++ b/mingw-w64-x265/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=x265
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.6
+pkgver=4.1
 pkgrel=1
 pkgdesc='Open Source H265/HEVC video encoder (mingw-w64)'
 arch=('any')
@@ -19,12 +19,13 @@ makedepends=(
 )
 options=('strip')
 url='https://bitbucket.org/multicoreware/x265_git'
+msys2_changelog_url='https://x265.readthedocs.io/en/master/releasenotes.html'
 msys2_references=(
   "cpe: cpe:/a:multicorewareinc:x265"
   "cpe: cpe:/a:multicorewareinc:x265_high_efficiency_video_coding"
 )
 source=("${_realname}-${pkgver}.tar.gz"::"https://bitbucket.org/multicoreware/x265_git/get/${pkgver}.tar.gz")
-sha256sums=('206329b9599c78d06969a1b7b7bb939f7c99a459ab283b2e93f76854bd34ca7b')
+sha256sums=('7d23cdcdbd510728202c0dfbf7c51eda26a395de2096c504c2b10d6035711102')
 
 
 prepare() {
