pygit2: backport build fix

--- a/mingw-w64-python-pygit2/PKGBUILD
+++ b/mingw-w64-python-pygit2/PKGBUILD
@@ -22,11 +22,15 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('7b29a6796baa15fc89d443ac8d51775411d9b1e5b06dc40d458c56c8576b48a2')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
+        "https://github.com/libgit2/pygit2/commit/eba710e45bb40e18641c6531394bb46631e7f295.patch")
+sha256sums=('7b29a6796baa15fc89d443ac8d51775411d9b1e5b06dc40d458c56c8576b48a2'
+            'e6d6c2cde580c163159bba8263c0fba4bc18af79781a6834e297cc2da242cbe9')
 
 prepare() {
-  cd "${srcdir}"
+  cd "${srcdir}/${_realname}-${pkgver}"
+  patch -Np1 -i "${srcdir}/eba710e45bb40e18641c6531394bb46631e7f295.patch"
+  cd ..
   rm -rf "python-build-${MSYSTEM}" | true
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
 }
